--- a/KP_1.7.10_1/Configs/ATLauncher.conf
+++ b/KP_1.7.10_1/Configs/ATLauncher.conf
@@ -1,5 +1,5 @@
 #ATLauncher Settings
-#Mon Dec 15 13:24:12 EST 2014
+#Mon Dec 15 14:12:19 EST 2014
 addedpacks=
 javaparameters=
 firsttimerun=false
@@ -21,7 +21,7 @@ initialmemory=256
 sortpacksalphabetically=false
 forgelogginglevel=INFO
 enableserverchecker=false
-lastaccount=stephencconway@gmail.com
+lastaccount=
 permGen=256
 theme=ATLauncher
 servercheckerwait=5
