Added big reactors and mariculture

--- a/KP_1.7.10_1/Instances/KingsPack1710v1/config/DynamicLights_entityClasses.cfg
+++ b/KP_1.7.10_1/Instances/KingsPack1710v1/config/DynamicLights_entityClasses.cfg
@@ -14,6 +14,7 @@ general {
     I:EntityBehemoth=0
     I:EntityBelph=0
     I:EntityBlizz=0
+    I:EntityBlock=0
     I:EntityBlockling=0
     I:EntityBrainyZombie=0
     I:EntityCacodemon=0
