--- a/KP_1.7.10_1/Instances/KingsPack1710v1/config/aobd.cfg
+++ b/KP_1.7.10_1/Instances/KingsPack1710v1/config/aobd.cfg
@@ -973,6 +973,19 @@ Rubracium {
 }
 
 
+Rutile {
+    B:EnderIO=true
+    B:Factorization=true
+    B:IC2=true
+    B:Mekanism=true
+    B:Railcraft=true
+    D:chance=1.0
+    S:colour=0xa19e93
+    D:energy=1.0
+    S:extra=Rutile
+}
+
+
 Samarium {
     B:EnderIO=true
     B:Factorization=true
