Added ender IO and mechworks

--- a/KP_1.7.10_1/Instances/KingsPack1710v1/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/KP_1.7.10_1/Instances/KingsPack1710v1/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -296,6 +296,8 @@ modintegration {
 orecamouflage {
     B:CertusQuartzCrystal=true
     B:CertusQuartzDust=true
+
+    # OreDictionary Names: dustEnder,dustEnderPearl
     B:EnderDust=true
     B:Flour=true
 
@@ -308,6 +310,8 @@ orecamouflage {
     # OreDictionary Names: nuggetIron
     B:IronNugget=true
     B:NetherQuartzDust=true
+
+    # OreDictionary Names: itemSilicon
     B:Silicon=true
 
     # OreDictionary Names: gearWood
