--- a/KP_1.7.10_1/Instances/KingsPack1710v1/config/DynamicLights_entityClasses.cfg
+++ b/KP_1.7.10_1/Instances/KingsPack1710v1/config/DynamicLights_entityClasses.cfg
@@ -67,6 +67,7 @@ general {
     I:EntityMinecartChest=0
     I:EntityNetherSoul=0
     I:EntityNightCrawler=0
+    I:EntityOtherPlayerMP=0
     I:EntityPig=0
     I:EntityPinky=0
     I:EntityPotion=0
