--- a/KP_1.7.10_1/Instances/KingsPack1710v1/config/enderio/EnderIO.cfg
+++ b/KP_1.7.10_1/Instances/KingsPack1710v1/config/enderio/EnderIO.cfg
@@ -287,6 +287,9 @@
     # The reach of attacks to each side of Joe.
     D:killerJoeAttackWidth=2.0
 
+    # If true, will give the player one xp of HIS current level. If false, will give the player one level of the killer joe's xp.
+    B:killerJoeGivePlayerLevelXP=true
+
     # The number of millibuckets of nutrient fluid used per attack.
     I:killerJoeNutrientUsePerAttackMb=5
 }
