--- a/KP_1.7.10_1/Instances/KingsPack1710v1/config/DynamicLights_entityClasses.cfg
+++ b/KP_1.7.10_1/Instances/KingsPack1710v1/config/DynamicLights_entityClasses.cfg
@@ -98,6 +98,8 @@ general {
     I:GCEntityClientPlayerMP=0
     I:PoisonousLibelle=0
     I:VengeanceSpirit=0
+
+    # Update Interval time for all Entities in milliseconds. The lower the better and costlier.
     I:"update Interval"=1000
 }
 
